<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green"
    android:padding="10dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/logo"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/app_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:fontFamily="sans-serif-condensed-medium" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_username"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password"
        android:inputType="textPassword"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email"
        android:inputType="textEmailAddress"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <Button
        android:id="@+id/register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/register_register"
        android:backgroundTint="@color/grey" />
</LinearLayout>